--- a/知识笔记.md
+++ b/知识笔记.md
@@ -265,37 +265,37 @@
 
 纵使你再苦口婆心，再循循善诱，他们只能听进去他们本来就想听到的，然后再把别人栽过的跟头再栽一遍，最后受伤了又后悔当初要是听进去别人说的话该多好......
 
-# 其它
+## 其它
 
-## 及时养成复盘的习惯何谓复盘？
+### 及时养成复盘的习惯何谓复盘？
 
 复盘是对以前做过的事情如以前做过的项目（如主持的会议、考试的过程）进行一次回顾和总结,从中发现问题，这就像刻意练习里说的那样，只有对反馈进行总结并且调整优化，我们才有可能进步，否则你说你练习了几十年，但你其实只是把1天的经验机械地重复了几十年而已。
 
-## 唯有行动才能解决焦
+### 唯有行动才能解决焦
 
 虑很多事情在我们没有开始做之前，总是会有很多错误的判断，会有很多疑惑，会很焦虑，不知道自己能不能做好。其实，我们在明白了一定的原理之后就可以开始去做了，因为往往只有我们行动了才能有更深的体会，行动了大部分焦虑就自然解决了，在行动中学习，学习中行动，即互联网思维中的：小步试错，快速迭代。
 
-## 精力、注意力管理
+### 精力、注意力管理
 
 对人来说最重要的财富不是时间，而是我们的注意力:注意力>时间>金钱 这才是三者的价值排序，而很多人忽略了注意力对于我们每个人的价值。注意力即为能有价值产出的时间。珍惜自己的注意力和精力，把它用在最有价值的地方，去学习，工作，成长。而不是玩抖音手机里千万不要下抖音、快手这些时间黑洞应用里。长期来看这些玩这些东西基本没用，当然要你完全戒除肯定很难，不过可以慢慢减少花在这上面的时间。
 
-## 独立思考
+### 独立思考
 
 我们中国几乎不教我们如何独立思考，培养批判性思维，教授、专家说的话就一定是对的吗？那些网络谣言如此荒谬，为何还有一堆人上当受骗？而独立思考的能力注定是一个人能有所成就的必备的能力，一个人如果不会独立思考，很大程度上被谣言所蒙骗，被传销所迷惑。甚至可能仅仅因为某些砖家推荐了几个“涨停板”，就全仓杀入股市，到头来连“底裤”都输光。。
 
-## 给自己和家人买保险
+### 给自己和家人买保险
 
 当你工作之后会发现，周围的人除了基本的医保还会买其他的保险，经济困难的话可以单纯买健康险，能保个平安，给家人和自己一个保障，一个普通的家庭是没有办法承担那些重大疾病的打击的，生病之后很容易压垮一个人，毁灭一个家庭
 
-## 少做低收益的事
+### 少做低收益的事
 
 比如王者荣耀、抖音等等，多做高收益的事情比如看书、学一门乐器、健身。因为王者荣耀那些东西长远来看对你的人生基本没有帮助。抖音不可怕，可怕的是你因为长时间坐高刺激的事情提高了自己的阈值，再也不能沉下心思考了。
 
-## 持续优化自我
+### 持续优化自我
 
 工作中，不做伸手党，遇到问题自己先想办法，要锻炼自己思考的能力。问别人只是为了优化自己的答案。领导交代的工作，做之前先问清楚和领导确认一遍，这样做事有清晰的目标，有反馈。这样才能做得更好。
 
-## 正确对待金钱
+### 正确对待金钱
 
 钱重要吗？的确很重要，可它是不是世界上最重要的东西呢？其实不是并不是越富有就越幸福人们会适应财富的增加，收入水平存在一个临界点，过了这个点，幸福感的增强速度远慢于收入的增长速度。（虽然平均来讲，收入的增加总是伴随着幸福感的增加）
 
@@ -303,46 +303,46 @@
 
 所以我们应该在“视金钱如粪土”和”金钱至上”之间保持一个微妙的平衡，这个平衡点对不同的人，具体的位置也不同。
 
-## 不要像机器人一样，做繁琐和精确到分钟的计划表
+### 不要像机器人一样，做繁琐和精确到分钟的计划表
 
 比如网上盛传的浙大学霸那个学习计划表（甚至精确到秒）这种看起来很好的习惯，但本质上，它是存在很大误区的，生活中的突发事件有很多，我们不能完全按照计划表上的事情做好，偶然的突发事情让计划脱离了轨道，就会很受挫，得不偿失！
 
-## 越早学会理财越好（更准确地说是学会理财的思维）
+### 越早学会理财越好（更准确地说是学会理财的思维）
 
 很多人说：我工资才5000，用不了几下就月光了，怎么理财啊，等我有钱再理吧！现实情况是“你不理财，财不理你”即使有一天你走大运，中了500万大奖，相信我不出两年，你迟早给它败光。这里的理财思维指的是一种金钱的分配方式，比如X%存XX宝，Y%当做救济金，Z%买基金，以及一些节流的思维。和财富的绝对值没有那么相关。
 
-## 不背后说人坏话
+### 不背后说人坏话
 
 因为在微信群等等里背后讨论别人，难免会被其他人截图传到当事人那里，从而造成关系的决裂，很可能别人一辈子都不会信任你，不会跟你有深入的合作，因为你背地里都这样，谁知道你究竟是个什么样的人？**所以我们不要在背后说人坏话，哪怕是线下，不会被截图**，这不仅是为了提高修养，更是为了保护自己的安全。
 
-## 快速从过程导向转变为结果导向的思维
+### 快速从过程导向转变为结果导向的思维
 
 什么是结果导向呢？结果导向指的是做一件事情，以结果为最终目标，以如何完成目标为导向的思考方式，与之相对的就是过程导向：只关心做事情的过程，不在乎结果。结果导向只关心事情的结果，不在乎你用什么方法完成的事情（只要没有违反道德、法律）。
 
 日本经营四圣之一的稻盛和夫在自传中提过这样一件事：在京瓷刚创立的时候，为了抢到订单，无论客户有什么技术上的要求，他都答应，其中有很多“看似不可能完成的任务”，但是他都一一解决了。**只有当你以结果为导向，对结果负责，而不是沉浸在“我已经很努力了的过程里面”你才不会遇到困难找借口，总想着逃避。**
 
-## 升米恩，斗米仇
+### 升米恩，斗米仇
 
 **不要成为一个没有原则的滥好人**，否则你帮助过的人不会感谢你，你没帮助到的人会怨恨你。我想起了有一个笑话，某个乞丐在街上祈祷，A路过后天天给了他10块钱，B看乞丐好欺负，天天打他一顿。某天A突然忘带零钱了，乞丐问他说你今天怎么不给我钱! 某天B忘记打了乞丐，乞丐却感激涕零觉得B内心其实是一个好人。虽然是个笑话，不过对我们理解道理有所帮助。
 
-## 不要看对方说了什么，而是思考他说这个的真实需求（其实就是追问黄金圈里的那个why是什么）
+### 不要看对方说了什么，而是思考他说这个的真实需求（其实就是追问黄金圈里的那个why是什么）
 
 比如说你爸妈突然给你打了个电话，给你说你们那里的天气怎么样怎么样,叫你注意保暖等等。表面上看是她想和你聊天气，但其实是你好久没回家，他们想你了，这时候你不应该回答：我知道了，我会注意保暖的。而应该说我XX时候就回来了。因为时代、观念的原因，他们只好这样表达他们的想法。
 
-## 年轻没多少钱的时候
+### 年轻没多少钱的时候
 
 **尽量把大多数可调用的钱砸在提升自己上**，这是回报最高的投资方式了。
 你说你去投资一年20%的净收益率算高了吧？50W的本金能挣10W，可是刚毕业的大学生有几个人有50W以上呢？只有2W块钱的时候与其把精力全花在炒股上，不如先拿来提升自己，等你有了10W以上再想着投资也不迟。
 
-## 实践最重要
+### 实践最重要
 
 **很多人都说：为什么我看了这么多书，懂得了这么多道理，可为何还是过不好这一生？那我想问你按书中的实践了吗？你有刻意地按照某些书里的道理控制自己的行为吗？这就好比一个人听了很多游泳的理论却从未下过一次水，却说：老天啊，我为什么不能成为一个游泳高手呢？**你觉得这些道理都有点用而不行动，等于在死循环里继续挣扎。
 
-## 决策的时候记得考虑机会成本和沉没成本
+### 决策的时候记得考虑机会成本和沉没成本
 
 举个例子上班的时候很多人为了省钱，选择租离公司很远的房子，**通勤就要2个小时但是租金却比较低，以为自己赚到了。但是你还忽略了时间这个成本啊，**你租一个离公司通勤只需半个小时的房子，虽然租金贵但大大地减少你时间、精力的浪费也许更划算呢？
 
-## 人生比我们想得还短暂，只有900个方格
+### 人生比我们想得还短暂，只有900个方格
 
 **每隔一个月，我就亲手把一块方格涂黑。**
 以前我总以为时间还很长，自己还很年轻，直到有一天我了解了这个东西。
@@ -359,13 +359,13 @@
 
 其实死亡一天天地都在接近我们，只是我们在大学的时候忙于打游戏、K歌，上班的时候忙于加班，中年的时候忙于带孩子。可是什么时候有时间做自己真正想做的事情呢？做那些让你激动不已的事情？当你60岁格子快涂满的时候，你会不会后悔要是自己在20岁时多努力一点，在25岁的时候多去看一看这个世界？**所以说趁年轻多去做一做你梦想的事情吧，因为每一天，每一个月你都在划去这900个方格里的一格啊！**
 
-## 为你自己打工，对自己的成长负责
+### 为你自己打工，对自己的成长负责
 
 很多人这样想：我们付出自己的工作时间，老板付我们报酬，那么老板付我多少钱，我就干多少钱的活，拿6000块我就干6000块的活，要是我在工作之余打打游戏，只干了5000块的活我就赚了！然而这样想完全是错误的，给老板打工，我们会总觉得老板在剥削自己，自己是那个“受害者”。不可否认，总会有不太公平的老板，不会按照你做的贡献、你的工作水平给你相应的薪资。**可是你始终是为自己打工**啊，你工作里面获得的成长，积累的项目经验，做出的业绩等等完全是自己的，别人都抢不走。
 
 如果你因为公司环境不好，老板不公平的环境而放弃好好工作，那就太傻了。环境不好，那我好好干积累项目经验跳槽就是。假如因为老板不公平，你作为一个程序员，选择每天上班就是网上随便找个代码复制再随便修改了事，你又得到了什么呢？除了那基本薪水外你什么都没有得到，技术没有得到提升，还浪费了最宝贵的光阴，如果再过两年还这样，估计要被老板开除了…… **记住你永远都在为一家叫做“自己”的无限责任公司打工。**
 
-## 给别人鼓励或者给别人点赞
+### 给别人鼓励或者给别人点赞
 
 会让你的运气变好，这是有心理学效应的（这叫皮格马利翁效应）
 
@@ -506,7 +506,7 @@
 
 吃不穷喝不穷，算计不到才穷。
 
-# 有哪些值得长期坚持下去的好习惯？
+## 有哪些值得长期坚持下去的好习惯？
 
 1. 心情糟糕时认真清理房间，心情莫名就开始清爽起来；
 2. 受人恩惠帮助后除了说声谢谢，再赠送一件小礼品，可以结识到更亲密的关系；
@@ -533,7 +533,7 @@
 
 坚持下来，会看到不一样的自己，那更美。 我们都一起，每日每月以求寸进，加油！
 
-# 二八定律
+## 二八定律
 
 二八定律，你的80%的成就来自于你的20%的行为。
 二八定律如何应用到生活中去？
@@ -543,18 +543,18 @@
 这5件事中，哪一件最有可能帮你达成这个目标？
 那么，在这件事情上，你应该投入最大的精立和注意力。
 
-# 笔记
+## 笔记
 
 ![notebook](zhishi.assets/notebook.jpg)
 
-# 创业机会
+## 创业机会
 
 1. 社交电商
 2. 自媒体
 3. 知识付费
 4. 情感咨询
 
-# 5W1H
+## 5W1H
 
 5W+1H：是对选定的项目、工序或操作，都要从原因（何因Why）、对象（何事What）、地点（何地Where）、时间（何时When）、人员（何人Who）、方法（何法How）等六个方面提出问题进行思考。
 
@@ -571,19 +571,19 @@
 6. **方式 （How）**——如何
    手段也就是工艺方法，例如，我们是怎样干的？为什么用这种方法来干？有没有别的方法可以干？到底应该怎么干？有时候方法一改，全局就会改变。
 
-# 天道酬勤、厚德载物
+## 天道酬勤、厚德载物
 
 1. 天道酬勤：意思是上天会按照每个人付出的勤奋，给予相应的酬劳。多一分耕耘，多一分收获，只要你付出了足够的努力，将来也一定会得到相应的收获。出自《周易》中的卦辞：“**天行健，君子以自强不息；地势坤，君子以厚德载物**”。
 2. 厚德载物：意思是指君子的品德应如大地般厚实可以承载万物。厚德载物，作为中华民族的精神和优良传统是十分重要的。一个有道德的人，应当像大地那样宽广厚实，像大地那样承载万物和生长万物。语出《周易》：“地势坤，君子以厚德载物。”
 
-# 为什么要努力读书
+## 为什么要努力读书
 
 1. 努力读书，不一定能挣很多钱，却可以看见更大的世界。
 2. 努力读书，不一定能大富大贵，却能有更多的选择机会。
 3. 努力读书，不一定会让你的智商更高，却能让你从容应对生活。
 4. 努力读书，不一定能让您成为完美的人，却能帮您不断完善自我。
 
-# 营销
+## 营销
 
 1. 客户说考虑一下？
 
@@ -614,9 +614,9 @@
 4. IP力
 5. 产品力
 
-# 电商
+## 电商
 
-## 选品思路总结
+### 选品思路总结
 
 1. 通过找无货源同行卖的好的好产品来选品
 2. 通过生意参谋找蓝海词，再找蓝海品来选品
@@ -633,13 +633,13 @@
 13. 思路之，用别人已经在市场经过验证接受的产品来选品
 14. 跨界蓝海，在一个平台上火的产品，别的平台还没有，移植过来就行了。
 
-## 拼多多快速盈利法
+### 拼多多快速盈利法
 
 1. 领券中心玩法高额券。10-25 之间的券，不需要开车。一两个星期后，一般就会有1500左右的免费访客。一天出个几十单，做10个链接，可以一天出几百单，大概一天1000多的利润，并且后续还会增长。这个玩法的特点是，拼多多领券中心高额券权重高的规则逻辑，可以完全不开车拿到免费流量。单量不大，对于怕亏损的玩家可以先从这个开始玩。一般一两周就可以进入盈利期。
 2. 9.9五折抢2000件玩法。首先确定品评分OK，然后就是报2000份的活动，活动结束恢复目标价。一般只留5元，2元领券中心，2元留给直通车，1元作为利润。然后推广跟上，其他不动。活动结束直接有9.9活动资源位，权重很高，没有历史最低价记录。后续平台各种活动可以接着玩，基本上一个月左右这个品就可以进入盈利期。
 3. 限量折扣工具玩法。建议细分市场的小品类，直接通过后台的限量折扣工具，不用求小二。第一次5折300件，第二次6折500件，第三次就7折卖500件，后面慢慢涨，基本上到了8折的时候就会进入盈利期了。这个期间直通车一直开车。如果是细分市场的品，基本上3到7天就会打爆，进入销量排行榜。其他资源位蜂拥而来。前提也是品要靠谱，评分要能稳住。这个不求小二，自己做5折抢，亏损可控，打爆速度很快。一般一个月左右进入盈利期。
 
-## 客户哪些需求没有被更好地满足?
+### 客户哪些需求没有被更好地满足?
 
 只要天天想这个问题，就能够持续发现市场中存在的机会。
 
@@ -647,7 +647,7 @@
 
 但是对客户需求的思考和理解，才是你能够超越你同行的地方。
 
-## 影响标品转化率的因素
+### 影响标品转化率的因素
 
 1. **价格因素**同类产品而言，在其他因素相同的情况下,你比竞争对手价格低一点，转化率明显会超过对手。
 2. **销量因素**标品受到价格排名的影响因素更大，因此马太效应会更加明显，也就是说卖得好的会非常好，卖的差的会非常差。
@@ -662,48 +662,807 @@
 
 未来我们更应该向品质化、专业化、品牌化方向发展。因为只有品牌化，才有溢价空间,前期可以靠着低价和排名去抢占市场，但价格战始终不是长久之计，杀敌一千，自损八百，没有钱赚的生意是不能长久维持的，品质化才能长久，而且如果不能保证品质，也会增加非常多的维护成本，难以在竞争中保持下去。
 
-# 金融
+## 金融
 
-## 72这个数字很神奇
+### 72这个数字很神奇
 
 用72除以收益点数，等于资产翻倍所用的时间。比如余额宝的收益率为3%，那存一万到余额宝，变成两万，需要72÷3=24年。如果房价每年涨6%，一百万的房子变成200万，需要72÷6=12年。（这个72公式只适用于大致估算，如果收益率太高，超过20%，就会不太准确了。但世界上其实没太多收益很高的投资）
 
-## 信用卡分期年利率大约要乘以2才是真实利率
+### 信用卡分期年利率大约要乘以2才是真实利率
 
 比如，刷了1万元，办理分期，分期月费率0.75%，月还本金833.33，手续费75元。那真实年利率其实是：0.75%×12×12÷6.5=16.6%
 
-## 市值不等于现金
+### 市值不等于现金
 
 比如一栋大楼，有一百套房子。如果A来花一百万成交了一套房，这个大楼的市值就变成1亿，如果B来花200万成交了一套房，这个大楼的市值就变成2亿，如果C来花1000万成交了一套房，这个大楼的市值就变成10亿。但这个大楼里面的房东都有1000万了吗？没有。如果没人来买了，房东们都要降价才能卖出去，如果50万都能成交了，所有房东的市值立马损失950万。股票同理。
 
-## 外汇储备
+### 外汇储备
 
 一加手机在美国卖了1亿美元，把这1亿美元打回国内的工商银行，工行先上交给央行，央行再印7亿人民币给一加的工行账户，这1亿美元就是中国的外汇储备。
 
-## 通货膨胀
+### 通货膨胀
 
 外汇储备如果增多，对应国内流通的人民币也会增多，除此之外，央行也会主动印钱刺激经济，这种情况下，如果物资生产不增长，那物价就会上涨。这就是通货膨胀。
 
-## 美国国债
+### 美国国债
 
 外汇储备是美元，放在那里是一笔死钱，央行为了让它增值，就拿一部分买了美国的国债，为的是赚利息。并不是美国强迫我们买的。
 
-## 通货紧缩
+### 通货紧缩
 
 如果生产的货物供给太多，远大于需求，不断降价都就卖不出去。这种情况下，货物就不值钱了，而钱则更值钱了。如果各行各业都是这样，全国就会通货紧缩。
 
-## 零和游戏
+### 零和游戏
 
 不创造价值的金融活动的本质都是零和游戏。比如赌博、期货和传销资金盘，一个人赚，就必定对应有一个人或者多个人亏；一个人亏，就必然对应有一个人或者几个人赚。再比如一些毫无内生价值的股票和数字货币，都是零和游戏。零和游戏万万别参与，注定亏钱。
 
-## 贷款买房不是投资，而是负债
+### 贷款买房不是投资，而是负债
 
 很多人一提到买房，就说房子是有价值的投资，可以抵抗通货膨胀，未来增值可以赚钱。但是，房子的本质是负债，不是投资。人们之所以会产生房子是投资的错觉，是因为过去几十年房价一直在稳定上涨的。但是未来不一定还会是这种情况。另外，许多很偏远的地方，房价十年都不会涨，甚至因为太偏远而卖不出去，那相当于跌到零了。许多一线城市，比如北京、杭州，都曾经经历过大跌，只是现在很多人已经忘记了而已。正确地定义房子，我认为应该叫奢侈品。
 
-## 金融危机
+### 金融危机
 
 可分为四种。货币危机（汇率不可承受地大幅变动）、债务危机（国际借贷领域，还不起债）、银行危机（银行资不抵债）、次贷危机（给穷人房贷太多，还不起）。通常这四种危机可能同时出现。总之，都是金融资产的大幅下跌，导致资不抵债引发了危机。
 
-## 经济危机
+### 经济危机
 
 经济危机指的是生产能力过剩，严重超过了需求。比如一个国家只有10亿人，却生产了20亿空调、电视、汽车，完全消费不完。这种情况下，企业贷款会出问题，现金流也会出问题，还会导致大面积的失业，社会动荡。
+
+## 知识管理
+
+### 01-什么是知识管理？
+
+#### 什么是知识管理？
+
+**提问人**： 拉登Dony
+1- 看不见摸不到
+>知识管理是一个看不见、摸不到，但让人非常向往的东西。
+>所以在学习知识管理的路上，每个人的理解各不相同，也会有很多错误的、>低效的做法。
+
+2- 知识管理就是笔记软件吗？
+>是不是印象笔记、Notion、幕布、Flomo等笔记软件？
+>只要用好这些软件，我就会知识管理了？
+>到底什么才是知识管理呢？
+
+**回答人：** 拉登老师
+知识管理是一个【管理工作】，就像是人力管理一样，最终的目的是希望，我们管理的人，能在需要的时候帮我们解决问题。
+
+##### 1- 知识管理，最终目标是解决问题
+
+>当我们遇到问题时，能够快速的检索出需要的知识，来解决问题。比如最近很火的「东方甄选」董宇辉老师，从三尺讲台到带货直播间，他在自己的知识储备中，快速找出了带货商品需要的知识，给新东方带来了带货的顶流。这是知识管理的经典案例。
+
+##### 2- 知识管理的产出物，是一个知识库
+
+> 所以知识管理的最终产出物，应该是一个你专属的「私人百度」，它能帮你：
+>
+> - 整理。把你一生学到的知识，有条理的整理起来。
+> - 检索。能够快速检索出需要的知识
+> - 有效。遇到问题时，这些知识能有效的解决问题。
+
+##### 3- 笔记软件，是搭建知识库的工具
+
+>这个知识库可以是纸质笔记本、电脑、手机等工具。也可以是印象笔记、GoodNotes、Notion、幕布等软件。
+>真正的高手像「董宇辉」老师一样，他们的知识库就是大脑。
+>只要能实现知识的整理、检索、有效存储，就可以。
+
+##### 4- 知识管理先做加法，再做减法
+
+>知识管理，就是管理自己知识储备，这是一个先加法，再做减法的过程。
+【1】加法
+是通过学习，丰富自己的知识储备。
+当你知识储备很少时，不用去做筛选，各种知识对你来说，都是一种成长，所以要做加法。
+【2】减法
+如果一直专注研究某个领域，比如Excel、写作、金融、编程等等，专业知识的积累越来越多，这
+个时候要尝试做减法。
+把时间、精力用在你擅长的领域，减少无关信息的干扰，不断的深挖一个领域，成为专家。
+
+在这个系列教程中，我们先从加法开始，一起学习如何高效的做知识管理。
+
+### 02- 知识管理，我曾经做过的五件错误的事情
+
+#### 知识管理，有哪些错误的习惯？
+
+**提问人：** 拉登Dony如题，整理了我曾经做过的6个错误的方法。
+你还有哪些困扰，欢迎在评论区互动。
+**回答人：** 拉登老师
+
+##### 1- 用不同层级的文件夹来管理文件
+
+> 在管理文件夹的时候，用不同的文件夹做分类管理，再建立一个子文件夹，区分完成和未完成，再用子子文件夹，来记录不同的月份。。。
+文件夹的层级越多，文件的打开率就越低。这些文件就会被打入十八层地狱，收藏吃灰了。
+
+##### 2- 用文件管理软件，来美化文件夹
+
+>比如腾讯桌面管理等软件，在桌面上对文件夹分类管理；或者给文件夹换一个颜色等等。
+这些软件针对文件比较少的需求，可以临时应对，当你的文件多到几百上千个，桌面放不开的时候，这些方法还是治标不治本。
+最好的方法，还是清单管理。
+![笔记](zhishi.assets/bj.png)
+
+##### 3- 在文件名称里标记状态
+
+> 在文件名称里添加备注信息，应该大部分人都做过吧。
+      年终总结.ppt
+      年终总结 第1版.ppt
+      年终总结 第2版.ppt
+      年终总结 第2版审核后.ppt
+      年终总结 第2版审核后修改.ppt
+无论备注的多么的详细，你总会有找不到最新版是哪个的困惑。
+
+##### 4- 文件修改时间，最新的文件
+
+>寄期望于文件列表里的【修改时间】属性，来找到最新的文件。
+经常是，这个文件我只是打开了一下，没做任何的修改，随后Ctrl+S了一下，就变成最新的了。
+实际最新的哪个，就找不清了，只能一个一个打开，重新确认。
+
+##### 5- 尝试手动给文件夹，加编码
+
+> 网上很多讲知识管理的文章，都教大家对文件、笔记添加编号来管理，而且不同类型的文件、笔记，要用不同的字母来开头。
+这是一个很好的习惯，但是当你的文件多到几百个，文件分类有十几个字母的时候，添加编码是一个让人烦恼，而且工作量很大的事情。
+
+##### 6- 用在线的工具来管理本地文件
+
+> 用比如notion，印象笔记等来管理本地的文件，把本地的文件，拖动到笔记里作为附件。
+如果只是Excel、Word、PPT，还说的过去，如果你有一些专业文件，比如PS、CAD、视频项目文件，或者文件大小在几十M、上百M的时候，这些文件放在在线工具中，每次还要再下载电脑上。
+更新完了，还得再上传，这版本的管理，又会变的非常复杂！
+
+### 03-做知识管理的目的是什么？
+
+#### 做知识管理的目的是什么？
+
+**提问人：** 拉登Dony
+知识管理到底有什么用？有什么大家熟悉的场景，可以用来理解知识管理？
+**回答人：** 拉登老师
+1- 知识管理，就像下象棋
+>“马走日字象走田，兵卒过河横竖走，士象不离老王边，车行直路炮翻山。”
+上面是一个象棋口诀，快速记住每个棋子的作用、规则，并学会使用这些棋子：
+
+- 用什么棋子，可以吃掉哪些棋子？
+- 没个棋子怎么走？
+- 有哪些下期的常用技巧？
+
+知识管理，就是管理你掌握的知识，这些知识就像是象棋中的“棋子”。
+
+所以想要做好知识管理，你需要：
+
+1. 有知识储备。有“棋子”可以为你所用。
+2. 有明确目标。象棋的目标是吃掉对方的将帅。知识管理也要明确目标，解决什么问题，否则掌握十万大军，也是纸上谈兵。
+3. 了解知识用法。不要一维的收藏，每个知识就像一颗棋子，要明白这个知识能用来干什么，解决什么问题？
+
+##### 2- 知识管理，不是做笔记
+
+知识管理常常会被理解成【做笔记】。
+
+- 比如，手帐笔记。用什么颜色？什么样的符号代表什么含义？
+- 比如，康奈尔笔记。笔记分成3个部分，每个部分记录什么内容？
+
+这些都只是表现形式，知识管理的目标是解决问题，而不仅仅是表现形式好看。
+我们遇到问题，第1反应是去百度搜索，而不是去优酷、抖音搜索，因为百度给出的答案，更快速、更直接。
+手帐笔记、康奈尔笔记是非常好的表现形式，但是在知识的搜索速度上，没有百度来的更快、更直接。
+
+##### 3- 知识管理，就是建立“通讯录”
+
+知识管理的目标，就像是建立【私人百度】，或者个人知识【通讯录】。
+我们非常清楚的知道，通讯录号码后面的人是谁？能解决什么问题？比如：
+
+1. 开锁电话
+2. 快递电话
+3. 酒店电话等等
+
+知识管理的目标，就是梳理一个个的知识，给他们建立好【通讯录】需要的时候，快速找到需要的号码快速解决问题。
+
+### 04-做不做知识管理，前后的区别是什么？
+
+#### 做不做知识管理，前后的区别是什么？
+
+**提问人：** 拉登Dony
+我不会做知识管理，不知道做完知识管理有什么用？
+有什么通俗易懂的比喻吗？
+**回答人：** 拉登老师
+
+知识管理，用“通讯录管理”来理解。假设：
+
+- 你要搬家，需要找搬家人员的电话
+- 马桶坏了，需要找维修人员的电话
+- 门锁坏了，需要找开锁人员的电话等等
+
+你会去哪里找呢？有下面几种方法：
+
+1. 翻翻通讯录，徒劳的尝试一下
+2. 去楼下转转、小广告看看，碰运气找人。
+3. 问问楼下大爷，请教有经验的人
+4. 打开美团app【生活服务】搜索相关内容。
+![美团](zhishi.assets/shfu.png)
+从上往下，信息获取的效率，精准度都在不断的提高，知识管理也是类似的。
+知识管理的目的
+
+##### 1- 提高检索的效率
+
+> 通多对信息进行分类整理。
+在美团里，单击顶部的分类图标，就可以聚焦信息。
+
+##### 2- 降低信息检索的门槛
+
+> 不用看小广告，不用社恐怎么问楼下的大爷。
+打开美团app，统一的入口，随用随走。
+做了知识管理，会怎么样？
+
+快速搜索
+> 在需要的时候，从知识库里快速检索出需要的信息。
+可以精准、高效的解决问题
+
+有效对策
+> 搜索到的知识，可以有效的解决问题
+
+知识体系
+> 对于某个领域的知识，有丰富的积累，完整的知识体系
+对知识有效的整理，可以做专题式的分享，成为领域的专家
+
+**不做知识管理，会怎么样？**
+
+- 学不会，对于知识感觉似曾相识，但是真正让你去说，又说不出东西来
+- 记不住，看过很多的文章、学过很多的知识，但是记不住
+- 用不上，收藏了很多的干货，但是遇到问题，还是只会百度
+- 不深入，对于某个领域知识，思考不深入，居于表面
+
+### 05-知识管理的流程是什么样的？
+
+#### 知识管理的流程是什么样的？
+
+**提问人：** 拉登Dony
+
+我该从哪里开始，具体操作的步骤是什么样的？
+
+**回答人：** 拉登老师
+
+步骤很简单，3步：
+
+1. 获取信息
+2. 整理信息
+3. 输出信息
+
+##### 1- 获取信息
+
+知识管理的前提，是有“知识”可以管理。获取知识，有一定的知识沉淀，才会产生知识管理的需求。
+
+在这个阶段需要解决的问题：
+
+1. 提升学习积极性。通过手帐、思维导图等等视觉化的方式，提升学习的积极性。
+2. 简化入口，降低获取信息的阻碍。
+
+##### 2- 整理信息
+
+信息积累到了一定的数量，查阅起来效率也会随之降低。
+
+对信息进行分类整理，提升检索信息的效率，是整理信息的目的。
+
+##### 3- 输出信息
+
+百度搜索信息时，输入关键字，搜索框就会给出相关的提示。
+
+信息的输出，就是在需要某个信息的时候，能够把相关的内容，快速的关联起来，更准确的解决当前的问题。
+
+所以信息的输出，需要做的有：
+
+1. 能够快速整合知识，综合运用解决问题
+2. 能够建立知识体系，输出专业化、专题化的内容
+
+### 06-新手如何开始知识管理？
+
+#### 新手如何开始知识管理？
+
+**提问人：** 拉登Dony
+
+我是新手，我从哪里开始，迈出知识管理学习的第1步？
+
+**回答人：** 拉登老师
+
+##### 1- 先开始写
+
+不要纠结用什么笔记的方式，什么笔记软件。
+
+可以写纸质的笔记、手绘笔记等等都可以。关键是开始写笔记，收集知识。
+
+##### 2- 笔记模板
+
+按照一个固定的笔记模板，不断的重复，形成笔记习惯。
+
+这个模板尽可能的简单，简单到不用思考就能做笔记。比如：
+
+- 123方法。每个笔记写第1点，第2点，第3点。
+- 故事6要素法。人物、时间、地点、起因、经过、结局
+- QA笔记法。一个问题，一个回答。
+
+一定要不断地重复一种方法，让这个方法成为肌肉记忆，下次启动的时候变的越来越简单。
+
+##### 3- 输入为主，整理为辅
+
+先不要着急整理，整理分类的时候，会让人陷入选择困难症，给输入增加阻碍。
+
+先建立好输入的习惯。积累一定数量之后，再开始分类整理。通过观察不同的笔记，归纳总结出分类方法，比凭空想象更加有效。
+
+收藏的内容、尽量放在一个统一的、固定的入口，就像我买电子产品只用京东，买菜、外卖只用美团，不需要选择。
+
+入口越多，越容易吃灰，越容易放弃。
+
+### 07-知识管理的前提是什么？
+
+#### 知识管理的前提是什么？
+
+**提问人：** 拉登Dony
+
+是不是所有的人，都需要知识管理？
+
+- 我是大学生，需要知识管理吗？
+- 刚工作1年，需要知识管理吗？
+- 部门经理，平时没怎么学习，需要知识管理吗？
+
+**回答人：** 拉登老师
+
+##### 1- 一切信息都是知识
+
+知识管理，本质上是信息的管理，在遇到问题时，能够快速调用自己过去的经验，来解决问题。比如：
+
+- 做了很多，得不到领导肯定怎么办？
+- 被同事抢功了怎么办？
+- 下属不服从管理怎么办？
+- 逢年过节怎么给领导送礼更合适？
+
+知识不一定是书本上的知识，自己过去的经验都是知识，能用来解决问题的方法都是知识。
+
+##### 2- 明确问题，有意识的积累知识
+
+遇到问题的时候，有意识的把自己想过的、搜索到的、向别人请教过的经验，总结下来，变成自己的知识库。
+
+比如下面的这些问题，总能随着时间慢慢的解决掉；但是下次遇到依然是一头雾水，不知道怎么做？
+
+- 做了很多，得不到领导肯定怎么办？
+- 被同事抢功了怎么办？
+- 下属不服从管理怎么办？
+- 逢年过节怎么给领导送礼更合适？
+
+把这些问题都归类成【职场社交】问题，后续有意思的收集整理，才能在这个话题上，积累更多的经验。
+
+##### 3- 别纠结分类，先有足够多的积累
+
+新手做知识管理，容易纠结怎么做分类，看到网上各种分类的管理方法就照搬。
+
+1. 分类方法，其实就是知识体系。没有足够多的积累，是无法找到适合自己的分类的。
+2. 分类是长出来的。即便是自己的做的分类，也会随着认知阅读、深度越广，不断的优化分类。
+
+所以先持续的输入，不断的积累，至少有50个积累，再考虑做分类的事情。
+
+##### 4- 尝试输出，才能有更多学习的动力
+
+知识就是力量，力量的表现方式就是能解决问题，最好是帮助被人解决问题。
+
+一个问题影响的人数越广，带来的激励就会越大，让你有源源不断的动力持续学习。
+
+### 08-如何做到有效的知识管理？
+
+#### 如何做到有效的知识管理？
+
+**提问人：** 拉登Dony
+
+什么样的知识管理，才是有效的知识管理？
+
+- 有好用的软件就算吗？
+- 做好分类管理就算吗？
+
+**回答人：** 拉登老师
+
+##### 1- 知识要能解决问题
+
+在富士康工作的时候，办公室墙上贴着标语【会必议、议必决、决必行、行必果】。
+
+- 会必议。会议要有明确的目标，不要为了开会而开会。
+- 议必决。会议后要有解决问题的决策、对策，不能走形式。
+- 决必行。有了决策要坚决落实执行，列出执行计划。
+- 行必果。执行计划要有追踪、有反馈、有结果、有考核。
+
+> 具体参考链接：
+[www.360doc.com](http://www.360doc.com/content/22/1207/13/242467_1059306171.shtml)
+
+知识管理和开会一样，要能解决问题，而不是一味的收藏，最关键的是要有能落实执行的计划，有结果的追踪、反馈。
+
+>工作中遇到很多烦心事情，父母会过来安慰你呀，要注意休息啊，要注意饮食作息规律等等。
+>虽然他们的建议都非常对、也非常好，但是解决不了你的问题，起不了作用。
+
+现在太多所谓的知识博主的方法，都非常的正确，让人忍不住收藏。收藏过后放下手机，还是按照之前的方法按部就班的工作，没有起到实际的作用。
+
+记住，知识管理也要【会必议、议必决、决必行、行必果】。
+
+##### 2- 知识要经常使用
+
+需要频繁的使用积累的知识解决问题。
+
+> 上学的时候我们学习了很多文化知识，用来解决【考试】的问题。
+> 工作后遇到的问题，和学校里学的知识没有关系，学过的知识就会慢慢被遗忘。
+
+因为和需求不匹配，不常用就会很快遗忘。
+
+##### 3- 知识要轻松获取
+
+获取难度越大，阻碍就越大，就越容易放弃。
+
+> 考试的时候，我们喜欢直接抄别人的作业，即便是开卷考试，也懒的去翻书，因为【抄】是获得正确结果最快的方法。
+
+行动法则MAT中有一个行动的计算公式：
+
+> 行为（Behavior）=动力（Motivation）+能力（Ability）+触发器（Trigger），要发生一个行为，需要三者同时满足。
+
+其中Ability是指，我们有没有能力去做一件事情。要考虑到几个成本：
+
+1. 金钱成本
+2. 形象成本
+3. 决策成本
+4. 学习成本
+5. 时间成本
+
+任何一个成本的增加，都会成为行动的阻碍。
+
+所以知识一定要轻松的获取，否则可能为了管理而去做知识管理。
+
+### 09-不同水平的人，学习知识管理，有什么区别？
+
+#### 不同水平的人，学习知识管理，有什么区别？
+
+**提问人：**  拉登Dony
+
+是不是每个人的知识管理方法、需求都一样的？
+
+**回答人：** 拉登老师
+
+不同人对知识管理的需求，可以分成下面几点：
+
+- 目标需求
+- 输入方式
+- 输出方式
+
+##### 1- 小学，目标清晰，知识资源丰富
+
+1. 目标需求清晰
+
+   > 小学、初中、高中的时候，学习目标、教学大纲非常清晰，都是固定的科目：语数英、物理、化学、生物、地理、历史政治。
+   >按照教学大纲一步步的学习即可。
+
+2. 输入简单，被动思考
+
+   > 学生不同思考要学什么，按照老师教的、书上写的，被动的填鸭式的学习。
+   > 不需要动脑思考的问题，都是简单的体力劳动，实现起来难度不大。
+
+3. 输出标准明确，努力方向清晰且单一
+
+   > 无论什么年代，什么地方，上学的输出结果明确、非常统一，就是高考！
+   > 努力的方向也非常清晰，尽可能掌握固定科目的所有内容，正确回答试卷中的问题。
+
+需要掌握的能力
+
+1. 会思考。老师教的内容，能理解。
+2. 死记硬背。把学到的内容记下来，考试的时候用。
+
+##### 2- 大学，目标清晰 ，知识资源较少
+
+1. 目标清晰
+
+   >目标依然非常清晰，按照教学大纲学习、考试、毕业。
+
+2. 输入困难，资源较少
+
+   >从小学到高中，有9年的时间，学习的都是相关的科目，语数英、物理、化学、地理。2022年全国的中小学生共计月1亿人，各种学习资料，琳琅满目。
+   > 大学只有4年，2022年大学毕业生1000万人，学习的科目从来都没接触过，都是细分的领域，资源相对也少很多，学习难度也难度大一些。
+
+3. 输出标准明确，但是方向更多
+
+   >考试、毕业依然是大学生最基本的目标。也是最简单、最单一的目标。
+   >相比中小学，大学毕业的下一个阶段，会有不同的努力方向。
+
+   1. 考研，考公。标准明确，相对简单
+   2. 工作。标准模糊，要学哪些知识？用这些知识解决什么问题？应聘哪些工作？都非常的模糊。大部分人在毕业哪一年才思考这些问题。
+
+需要掌握的能力：
+
+1. 主动学习。大学不再是填鸭式学习，老师只负责教，学不学是自己的事情。
+2. 主动思考。老师不会像中小学老师那么有耐心，我们要用更短的时间，掌握更复杂的知识。要自己学会思考。
+3. 拓展新科目。考研、考公不会发课本，也不在教学大纲里。招聘单位也不会告诉你他们需要你掌握什么能力，这一切都要自己明确方向，拆解成学习的计划。
+
+##### 3- 职场，目标模糊 ，知识资源匮乏
+
+1. 目标需求模糊
+
+   > 要学哪些知识？解决哪些问题？目标不明确。
+   > 没有教学大纲，没人告诉你职场要学哪些科目、哪些技能。需要学习哪些东西，需要自己去寻找。
+
+2. 输入复杂，信息过载
+
+   没有固定的教材，固定的教学大纲，学习的信息来源非常复杂：
+
+      1. 跟公司文件学习。新员工入职培训之类的学习。
+      2. 跟同事、领导、客户学习。在事儿上总结学习。
+      3. 通过网络学习。抖音、小红书等各种渠道学习。
+
+   信息太杂，太多，让人无从下手。不断的收藏吃灰。
+
+3. 输出标准模糊，努力方向模糊
+
+   > 怎么做工作？工作做到什么程度？也没有统一的考试，知识的产出物，产出标准都是模糊的。
+   >职场人的能力，很多时候都是摸着石头过河，一步步试错总结出来的。
+
+   需要掌握的能力：
+
+   - 明确目标，能够清晰的梳理出自己工作中常见的问题，明确学习目标。
+   - 获取知识，标准化信息来源，把零碎的信息渠道，整合到一个中去，注意力更加集中。
+   - 整理知识，做好分类管理，遇到问题时，能够更快、更准的找到积累的知识。
+   - 输出知识，有明确的交付形式，知道怎么做？做到什么程度？把收藏的支持，都能用到实处。
+
+### 10-如何找到适合自己的知识？
+  
+#### 如何找到适合自己的知识？
+
+**提问人：** 拉登Dony
+
+进入职场了，没有标准的课程，没有教学大纲了，如何能够找到适合自己的知识？
+
+如何明确自己的学习目标呢？
+
+**回答人：** 拉登老师
+
+##### 1- 先开始做，别考虑太多
+
+新人在学习新知识时，顾虑会比较多，经常被下面这类问题阻碍，无法迈出第1步。比如下面这些问题，你是不是也纠结过？
+
+1. 这个知识要学多长时间能学会？
+2. 学完之后能做什么事情？
+3. 如何系统的学习xxx知识？
+4. 学完之后如果没有用，怎么办？
+
+每个人的需求、环境各不相同，同样的问题，不同人的答案不一样。别人的经验只能给你做借鉴，正确的答案，只有自己尝试过才能真正了解。
+> 前公司有个同事和我一个宿舍。一直嚷嚷着要跟我学习Excel。
+> 我说可以，等你学好了，记得吃个饭，无条件、毫无保留的教你。
+> 同事说：不着急，等我看完这个电视剧，再跟你学。
+> 半年后，我跳槽了，那位同事从来没有找我学习过。
+
+进入职场之后，没有人会你的学习成果打包票，也没有人给你做学习承诺。敢给你做各种承诺的人，是想让你花钱买课。
+
+##### 2- 明确目标，专注+积累
+
+迈出第1步之后，尝试做一些积累，不用很多，这一步是为了**明确学习的目标**。
+
+明确了目标，就像是知道了大学专业的课程表，然后定向的去学习这些课程就可以了，不要自己琢磨该学什么。
+
+我经常从下面这些渠道，获得【专业知识】，比如：
+
+- 专业论坛、个人博客
+- 优质的公众号、自媒体账号
+
+锁定几个比较优质的账号、作者，持续的学习，不断积累、持续专注，目标会变的越来越清晰。
+
+下面是我学习Power BI时，整理的几个优质公众号的文章，741篇都是免费的。
+![power](zhishi.assets/powerbi.png)
+
+为了更加专注、更加系统的学习这些知识，我有做了详细的分类。
+
+这些分类，就像是学校里不同的科目、书本里不同的章节，学习起来更加系统，目标更加明确。
+![power-a](zhishi.assets/powerbi-b.png)
+
+##### 3- 花钱买经验，节省时间
+
+关注免费的资源是一种非常好的学习方式，但是需要花费大量的时间去筛选内容，去试错，效率非常低。
+
+花钱买经验是最高效的方法，可以尝试购买图书、课程、培训等，内容上会更加成体系，作者内容的精华输出。
+![time](zhishi.assets/time.png)
+
+这个阶段的知识，就像是58同城上的民生服务，有开锁的、配钥匙的、修自行车的、搬家的。
+![58](zhishi.assets/58.png)
+
+这些服务的特色是：
+
+- 快速。可以快速的检索到这些服务
+- 专业。可以有效的解决问题
+- 省时。无论是从快速、专业度上，都能大量的节省时间
+
+这也是我们学习知识管理，最重要实现的目标。
+
+### 11-如何快速的输入知识？
+
+#### 如何快速的输入知识？
+
+**提问人：** 拉登Dony
+我平时获取信息的渠道非常多，比如B站、小红书、抖音、公众号之类的。这算是知识的输入吧。
+![信息渠道](zhishi.assets/xyqd.png)
+但是收藏了很多，都没怎么看。
+如何有效的、高效的输入知识啊？
+**回答人：** 拉登老师
+
+##### 1- 固定信息来源
+
+把收藏的知识，都放在一个统一的入口，下次找的时候更方便，不用翻箱倒柜。
+> 就像我们记别人的联系方式一样，别人可能是：
+>
+> 1. 口头说一个号码
+> 2. 微信发一个号码
+> 3. 网上搜索到的号码
+> 4. 给你一张名片等等
+> 这些方法过半年都会忘的一干二净，最有效的方法，就是全部统一记在【通讯录】里，找练习方式，就去【通讯录】。
+> 知识管理的输入，也要又一个【通讯录】类型的统一入口。
+
+推荐使用flomo，理由如下：
+
+1. 足够简单，就像发一条微信一样简单，减少行动成本。
+2. 全平台支持，可以在手机上收藏，电脑上查看。随时随地都可以收集知识。
+3. 功能免费，基础的功能都是免费的，满足日常使用需求。
+
+[flomoapp.com](https://flomoapp.com/)
+
+![flomoapp.com](zhishi.assets/flomapp-1.png)
+![flomoapp.com](zhishi.assets/flomapp-2.png)
+
+##### 2- 固定笔记模板
+
+看书的时候，做了很多的笔记，但是遇到问题的第1反应，还是去百度搜索。因为：
+
+- 笔记太慢。查找起来太慢，笔记记得条理不清楚，不能直接解决问题。
+- 百度太快。找起来很方便，搜出来的就是答案。
+
+所以，做笔记的时候，不要写的太详细，别做太多的思维导图。
+假象一下1年后，你再来翻看笔记是下面这样，怎么快速给那时的自己，提供出更有价值的信息？
+
+![导图](zhishi.assets/daotu.png)
+
+目前来看，最快速、最高效的方式，还是文字搜索，不是视觉化呈现。
+
+所以笔记就要：
+
+1. 点明价值。笔记中，明确点名这个知识点的价值，能解决问题。
+2. 回答简洁。把书中的关键知识点，做精简、做总结，用第1点、第2点、第3点的方式做笔记，让1年后（甚至更多年后）的自己，快速找到答案，获得有价值的信息。
+
+思维导图、康奈尔笔记法等等都是非常经典的笔记方法，但是1年后再看这些笔记，从上面两点来看，效率太低了。
+
+我自己总结了一个【QA笔记法】，
+
+1. **Q问题。**每个知识点，都转换成一个问题，总结知识点的价值，能解决什么问题？
+2. **A答案。**每个问题下面都跟着答案，1234条，看到总结的小标题，就明白解决的大致方法了。
+后面会再详细的讲解。
+
+### 12-快速收集知识的案例有哪些？
+
+#### 快速收集知识的案例有哪些？
+
+**提问人：** 拉登Dony
+
+前面讲的道理都懂、都对，但是自己做的时候，还是无从下手，
+
+输入收集知识的时候，有什么案例方法可以参考吗？
+
+**回答人：** 拉登老师
+
+一定要有目标的去收集知识点。
+
+##### 1- 透过现象-找到有用的知识
+
+一篇文章或视频里面80%的内容是用来激发用户的感受，调动用户情绪，让用户感觉【这个真好】【非常有用】。
+
+但这只是表面上的感受，遇到问题我们依然还是回去百度，因为我们不知道：
+
+- 具体好在哪里？
+- 可以用在哪里？
+- 怎么去用？
+- 用完有什么好处？
+
+能把上面几个问题回答清楚，才能看到剩下20%真正有用的知识。
+
+##### 2- 通过提问，明确目标
+
+日本公司是如何向下属布置任务的，管理者至少会问五遍，让下属更清楚的明确问题要求：
+
+> **第一遍:** 管理者:“渡边君，麻烦你帮我做一件✘✘事。”
+> 渡边君:“是！”转身要走。
+> **第二遍:** 管理者:“别着急，回来。麻烦你重复一遍。”
+> 渡边君:“你是让我去做✘✘事对吗？这次我可以走了吗？”
+> **第三遍:** 管理者:“你觉得我让你做这事的目的是什么？”
+> “你让我做这事的目的大概是咱们这次能够顺利地召开培训，这次我可以走了吗？”
+> **第四遍:** 管理者:“别着急，你觉得做这件事会遇到什么意外？遇到什么情况你需要向我汇报，遇到什么情况你可以自己做决定？”
+> 渡边君:“这件事大概有这么几种情况……如果遇到A情况我向您汇报，如果遇到B情况我自己做决定。您看可以吗？”
+> **最后一遍:** 管理者:“如果让你自己做这个事，你有什么更好的想法和建议吗？”
+> 渡边君:“如果让我来做，可以在某个环节……”
+
+提问的过程，会激发对方去思考，慢慢的明确目标。
+
+>比如，在学习写作表达时，需要学习的内容很多，包括：写作框架、起标题、引用金句、故事带入等等，我总是记不住，写作的时候，也想不到从这些角度去写。
+>读到好的文章，也不会向上面那样结构清晰的整理文章的优点。
+>后来我想到一个方法，每次遇到好的文章，都会问自己，别人是【如何把100字写成1000字】的？然后一这个问题为标题，收集素材。
+
+久而久之就积累了很多：
+![积累](zhishi.assets/jl.png)
+
+从2021年到2022年，一个问题可以把【如何写作】的素材快速串起来，查找起来非常方便。
+
+不断的重复提问，这个问题就变成了一个明确的研究目标方向，在思考和检索的时候，都可以快速唤起你的记忆。
+
+下面是【如何把100字写成1000字】这个问题的积累，让在写作上轻松的迈出第1步。
+
+【01】15- 如何把100字写成1万字？又不显得啰嗦？
+   > 1- 给出结论，勾勒正面影响画面。
+   > 2- 列举反例，勾勒不好的画面。
+   > 3- 多写一些小故事，鸡毛蒜皮有画面感
+   > 4- 善用排比句，让人感觉说的很对
+   > 5- 学会要赞
+
+【02】16- 如何把100字写成1000字
+   1- 整理文档大纲，罗列清单
+   2- 分类整理大纲，梳理逻辑
+   3- 电影时演绎大纲模块
+
+【03】17- 如何把100字写成1000字
+   1- 偷换概念，把问题作为答案展开说明，对答案闭口不提
+   2- 多说正确的废话，把好的事务都写上
+
+【04】19- 如何把100字写成1000字？
+   1- 善用心理学的专业术语
+   2- 举例联想
+   3- 找共鸣，描述情绪
+
+【05】22- 100字如何写成10000字
+
+   1- 梳理大纲分模块
+   2- 举例子讲故事
+   3- 写排比
+
+【06】26- 如何把100字写成1000字
+
+   1- 确定你要表达的观点。
+   2- 罗列关键字
+   3- 用文字把关键字串联起来
+
+【07】33- 如何把一句话，写成1000字
+
+【08】把【化繁为简】写成1000个字
+
+   1- 什么是化繁为简
+
+【09】如何把100个字，写成1000个字？
+
+   1- 引用经典理论
+
+【10】如何把100个字写成1000字？
+
+   1- 解释概念，描述画面
+   2- 插入图片
+   3- 讲自己的故事
+   4- 写自己的感受
+
+##### 3- 分类标记，熟能生巧
+
+如果不知道怎么提问，可以尝试对笔记、知识进行分类，在分类的过程中，你会思考：
+
+1. 这个问题属于什么分类？
+2. 需要新建一个分类？还是放在已有的分类里？
+3. 现有的分类合不合理，有没有重复的、交叉的分类？
+
+不断思考分类方式的过程，就是在建立知识体系的过程，也是慢慢明确学习目标，越来越专注、聚焦的过程。
+
+分类的具体操作方式有很多，可以是：
+
+1. 建立文件夹。
+
+   给不同的分类建立对应的文件夹，是我们平时最常用的方法。
+   ![分类](zhishi.assets/fl.png)
+
+2. 在名称中分类
+
+   比如【如何把100字写成1000字】这个问题，其实就是在文件、笔记名称中做了分类的标记。
+
+   后续通过筛选，可以快速找出这些分类。
+   ![筛选](zhishi.assets/sx.png)
+
+3. 添加分类列
+
+   我习惯用表格来管理文件，所以会添加辅助列，来备注笔记的【分类】。
+    ![表格](zhishi.assets/bg.png)
+
+通过这些分类，可以更方便的进行多维度的分类管理。
+
+需要特别说明的是，分类管理过程中，我们很容易会纠结【分类是否合理】，然后不断的修改分类方式。
+
+**随着自己的认知越来越深入，分类是不断变化的，这是很正常的过程。**
+
+分类其实就是知识体系，不可能一步到位，我在做知识管理过程中，也在不断的修改、甚至完全推翻之前的分类。这是知识管理必不可少的过程。
