--- a/知识笔记.md
+++ b/知识笔记.md
@@ -715,16 +715,21 @@
 #### 什么是知识管理？
 
 **提问人**： 拉登Dony
+
 1- 看不见摸不到
+
 >知识管理是一个看不见、摸不到，但让人非常向往的东西。
->所以在学习知识管理的路上，每个人的理解各不相同，也会有很多错误的、>低效的做法。
+>所以在学习知识管理的路上，每个人的理解各不相同，也会有很多错误的、低效的做法。
 
 2- 知识管理就是笔记软件吗？
+
 >是不是印象笔记、Notion、幕布、Flomo等笔记软件？
 >只要用好这些软件，我就会知识管理了？
->到底什么才是知识管理呢？
+
+到底什么才是知识管理呢？
 
 **回答人：** 拉登老师
+
 知识管理是一个【管理工作】，就像是人力管理一样，最终的目的是希望，我们管理的人，能在需要的时候帮我们解决问题。
 
 ##### 1- 知识管理，最终目标是解决问题
@@ -748,13 +753,13 @@
 ##### 4- 知识管理先做加法，再做减法
 
 >知识管理，就是管理自己知识储备，这是一个先加法，再做减法的过程。
-【1】加法
-是通过学习，丰富自己的知识储备。
-当你知识储备很少时，不用去做筛选，各种知识对你来说，都是一种成长，所以要做加法。
-【2】减法
-如果一直专注研究某个领域，比如Excel、写作、金融、编程等等，专业知识的积累越来越多，这
-个时候要尝试做减法。
-把时间、精力用在你擅长的领域，减少无关信息的干扰，不断的深挖一个领域，成为专家。
+> 【1】加法
+>是通过学习，丰富自己的知识储备。
+>当你知识储备很少时，不用去做筛选，各种知识对你来说，都是一种成长，所以要做加法。
+>【2】减法
+>如果一直专注研究某个领域，比如Excel、写作、金融、编程等等，专业知识的积累越来越多，这
+>个时候要尝试做减法。
+>把时间、精力用在你擅长的领域，减少无关信息的干扰，不断的深挖一个领域，成为专家。
 
 在这个系列教程中，我们先从加法开始，一起学习如何高效的做知识管理。
 
