--- a/知识笔记.md
+++ b/知识笔记.md
@@ -755,10 +755,12 @@
 >知识管理，就是管理自己知识储备，这是一个先加法，再做减法的过程。
 >
 > 【1】加法
+>
 >是通过学习，丰富自己的知识储备。
 >当你知识储备很少时，不用去做筛选，各种知识对你来说，都是一种成长，所以要做加法。
 >
 >【2】减法
+>
 >如果一直专注研究某个领域，比如Excel、写作、金融、编程等等，专业知识的积累越来越多，这
 >个时候要尝试做减法。
 >把时间、精力用在你擅长的领域，减少无关信息的干扰，不断的深挖一个领域，成为专家。
@@ -769,8 +771,12 @@
 
 #### 知识管理，有哪些错误的习惯？
 
-**提问人：** 拉登Dony如题，整理了我曾经做过的6个错误的方法。
+**提问人：** 拉登Dony
+
+如题，整理了我曾经做过的6个错误的方法。
+
 你还有哪些困扰，欢迎在评论区互动。
+
 **回答人：** 拉登老师
 
 ##### 1- 用不同层级的文件夹来管理文件
@@ -783,17 +789,20 @@
 >比如腾讯桌面管理等软件，在桌面上对文件夹分类管理；或者给文件夹换一个颜色等等。
 这些软件针对文件比较少的需求，可以临时应对，当你的文件多到几百上千个，桌面放不开的时候，这些方法还是治标不治本。
 最好的方法，还是清单管理。
+
 ![笔记](zhishi.assets/bj.png)
 
 ##### 3- 在文件名称里标记状态
 
 > 在文件名称里添加备注信息，应该大部分人都做过吧。
-      年终总结.ppt
-      年终总结 第1版.ppt
-      年终总结 第2版.ppt
-      年终总结 第2版审核后.ppt
-      年终总结 第2版审核后修改.ppt
-无论备注的多么的详细，你总会有找不到最新版是哪个的困惑。
+>
+1. 年终总结.ppt
+2. 年终总结 第1版.ppt
+3. 年终总结 第2版.ppt
+4. 年终总结 第2版审核后.ppt
+5. 年终总结 第2版审核后修改.ppt
+>
+>无论备注的多么的详细，你总会有找不到最新版是哪个的困惑。
 
 ##### 4- 文件修改时间，最新的文件
 
@@ -817,15 +826,20 @@
 #### 做知识管理的目的是什么？
 
 **提问人：** 拉登Dony
+
 知识管理到底有什么用？有什么大家熟悉的场景，可以用来理解知识管理？
+
 **回答人：** 拉登老师
-1- 知识管理，就像下象棋
+
+##### 1- 知识管理，就像下象棋
+
 >“马走日字象走田，兵卒过河横竖走，士象不离老王边，车行直路炮翻山。”
 上面是一个象棋口诀，快速记住每个棋子的作用、规则，并学会使用这些棋子：
-
-- 用什么棋子，可以吃掉哪些棋子？
-- 没个棋子怎么走？
-- 有哪些下期的常用技巧？
+>
+> - 用什么棋子，可以吃掉哪些棋子？
+> - 没个棋子怎么走？
+> - 有哪些下期的常用技巧？
+>
 
 知识管理，就是管理你掌握的知识，这些知识就像是象棋中的“棋子”。
 
@@ -843,12 +857,15 @@
 - 比如，康奈尔笔记。笔记分成3个部分，每个部分记录什么内容？
 
 这些都只是表现形式，知识管理的目标是解决问题，而不仅仅是表现形式好看。
+
 我们遇到问题，第1反应是去百度搜索，而不是去优酷、抖音搜索，因为百度给出的答案，更快速、更直接。
+
 手帐笔记、康奈尔笔记是非常好的表现形式，但是在知识的搜索速度上，没有百度来的更快、更直接。
 
 ##### 3- 知识管理，就是建立“通讯录”
 
 知识管理的目标，就像是建立【私人百度】，或者个人知识【通讯录】。
+
 我们非常清楚的知道，通讯录号码后面的人是谁？能解决什么问题？比如：
 
 1. 开锁电话
@@ -862,8 +879,11 @@
 #### 做不做知识管理，前后的区别是什么？
 
 **提问人：** 拉登Dony
+
 我不会做知识管理，不知道做完知识管理有什么用？
+
 有什么通俗易懂的比喻吗？
+
 **回答人：** 拉登老师
 
 知识管理，用“通讯录管理”来理解。假设：
@@ -878,9 +898,12 @@
 2. 去楼下转转、小广告看看，碰运气找人。
 3. 问问楼下大爷，请教有经验的人
 4. 打开美团app【生活服务】搜索相关内容。
+
 ![美团](zhishi.assets/shfu.png)
+
 从上往下，信息获取的效率，精准度都在不断的提高，知识管理也是类似的。
-知识管理的目的
+
+知识管理的目的:
 
 ##### 1- 提高检索的效率
 
@@ -890,19 +913,26 @@
 ##### 2- 降低信息检索的门槛
 
 > 不用看小广告，不用社恐怎么问楼下的大爷。
-打开美团app，统一的入口，随用随走。
-做了知识管理，会怎么样？
+>
+> 打开美团app，统一的入口，随用随走。
+
+**做了知识管理，会怎么样？**
 
 快速搜索
+
 > 在需要的时候，从知识库里快速检索出需要的信息。
-可以精准、高效的解决问题
+>
+> 可以精准、高效的解决问题
 
 有效对策
+
 > 搜索到的知识，可以有效的解决问题
 
 知识体系
+
 > 对于某个领域的知识，有丰富的积累，完整的知识体系
-对知识有效的整理，可以做专题式的分享，成为领域的专家
+>
+> 对知识有效的整理，可以做专题式的分享，成为领域的专家
 
 **不做知识管理，会怎么样？**
 
@@ -1072,6 +1102,7 @@
 知识管理和开会一样，要能解决问题，而不是一味的收藏，最关键的是要有能落实执行的计划，有结果的追踪、反馈。
 
 >工作中遇到很多烦心事情，父母会过来安慰你呀，要注意休息啊，要注意饮食作息规律等等。
+>
 >虽然他们的建议都非常对、也非常好，但是解决不了你的问题，起不了作用。
 
 现在太多所谓的知识博主的方法，都非常的正确，让人忍不住收藏。收藏过后放下手机，还是按照之前的方法按部就班的工作，没有起到实际的作用。
@@ -1083,6 +1114,7 @@
 需要频繁的使用积累的知识解决问题。
 
 > 上学的时候我们学习了很多文化知识，用来解决【考试】的问题。
+>
 > 工作后遇到的问题，和学校里学的知识没有关系，学过的知识就会慢慢被遗忘。
 
 因为和需求不匹配，不常用就会很快遗忘。
