--- a/知识笔记.md
+++ b/知识笔记.md
@@ -1358,8 +1358,8 @@
 
 我自己总结了一个【QA笔记法】，
 
-1. **Q问题。**每个知识点，都转换成一个问题，总结知识点的价值，能解决什么问题？
-2. **A答案。**每个问题下面都跟着答案，1234条，看到总结的小标题，就明白解决的大致方法了。
+1. **Q问题。** 每个知识点，都转换成一个问题，总结知识点的价值，能解决什么问题？
+2. **A答案。** 每个问题下面都跟着答案，1234条，看到总结的小标题，就明白解决的大致方法了。
 后面会再详细的讲解。
 
 ### 12-快速收集知识的案例有哪些？
@@ -1394,23 +1394,39 @@
 日本公司是如何向下属布置任务的，管理者至少会问五遍，让下属更清楚的明确问题要求：
 
 > **第一遍:** 管理者:“渡边君，麻烦你帮我做一件✘✘事。”
+>
 > 渡边君:“是！”转身要走。
+>
+>
 > **第二遍:** 管理者:“别着急，回来。麻烦你重复一遍。”
+>
 > 渡边君:“你是让我去做✘✘事对吗？这次我可以走了吗？”
+>
+>
 > **第三遍:** 管理者:“你觉得我让你做这事的目的是什么？”
+>
 > “你让我做这事的目的大概是咱们这次能够顺利地召开培训，这次我可以走了吗？”
+>
+>
 > **第四遍:** 管理者:“别着急，你觉得做这件事会遇到什么意外？遇到什么情况你需要向我汇报，遇到什么情况你可以自己做决定？”
+>
 > 渡边君:“这件事大概有这么几种情况……如果遇到A情况我向您汇报，如果遇到B情况我自己做决定。您看可以吗？”
+>
+>
 > **最后一遍:** 管理者:“如果让你自己做这个事，你有什么更好的想法和建议吗？”
+>
 > 渡边君:“如果让我来做，可以在某个环节……”
 
 提问的过程，会激发对方去思考，慢慢的明确目标。
 
 >比如，在学习写作表达时，需要学习的内容很多，包括：写作框架、起标题、引用金句、故事带入等等，我总是记不住，写作的时候，也想不到从这些角度去写。
+>
 >读到好的文章，也不会向上面那样结构清晰的整理文章的优点。
+>
 >后来我想到一个方法，每次遇到好的文章，都会问自己，别人是【如何把100字写成1000字】的？然后一这个问题为标题，收集素材。
 
 久而久之就积累了很多：
+
 ![积累](zhishi.assets/jl.png)
 
 从2021年到2022年，一个问题可以把【如何写作】的素材快速串起来，查找起来非常方便。
@@ -1418,56 +1434,60 @@
 不断的重复提问，这个问题就变成了一个明确的研究目标方向，在思考和检索的时候，都可以快速唤起你的记忆。
 
 下面是【如何把100字写成1000字】这个问题的积累，让在写作上轻松的迈出第1步。
-
-【01】15- 如何把100字写成1万字？又不显得啰嗦？
-   > 1- 给出结论，勾勒正面影响画面。
-   > 2- 列举反例，勾勒不好的画面。
-   > 3- 多写一些小故事，鸡毛蒜皮有画面感
-   > 4- 善用排比句，让人感觉说的很对
-   > 5- 学会要赞
-
-【02】16- 如何把100字写成1000字
-   1- 整理文档大纲，罗列清单
-   2- 分类整理大纲，梳理逻辑
-   3- 电影时演绎大纲模块
-
-【03】17- 如何把100字写成1000字
-   1- 偷换概念，把问题作为答案展开说明，对答案闭口不提
-   2- 多说正确的废话，把好的事务都写上
-
-【04】19- 如何把100字写成1000字？
-   1- 善用心理学的专业术语
-   2- 举例联想
-   3- 找共鸣，描述情绪
-
-【05】22- 100字如何写成10000字
-
-   1- 梳理大纲分模块
-   2- 举例子讲故事
-   3- 写排比
-
-【06】26- 如何把100字写成1000字
-
-   1- 确定你要表达的观点。
-   2- 罗列关键字
-   3- 用文字把关键字串联起来
-
-【07】33- 如何把一句话，写成1000字
-
-【08】把【化繁为简】写成1000个字
-
-   1- 什么是化繁为简
-
-【09】如何把100个字，写成1000个字？
-
-   1- 引用经典理论
-
-【10】如何把100个字写成1000字？
-
-   1- 解释概念，描述画面
-   2- 插入图片
-   3- 讲自己的故事
-   4- 写自己的感受
+>
+>【01】15- 如何把100字写成1万字？又不显得啰嗦？
+>
+> 1. 给出结论，勾勒正面影响画面。
+> 2. 列举反例，勾勒不好的画面。
+> 3. 多写一些小故事，鸡毛蒜皮有画面感
+> 4. 善用排比句，让人感觉说的很对
+> 5. 学会要赞
+>
+>【02】16- 如何把100字写成1000字
+>
+>1. 整理文档大纲，罗列清单
+>2. 分类整理大纲，梳理逻辑
+>3. 电影时演绎大纲模块
+>
+>【03】17- 如何把100字写成1000字
+>
+>1. 偷换概念，把问题作为答案展开说明，对答案闭口不提
+>2. 多说正确的废话，把好的事务都写上
+>
+>【04】19- 如何把100字写成1000字？
+>
+> 1. 善用心理学的专业术语
+> 2. 举例联想
+> 3. 找共鸣，描述情绪
+>
+> 【05】22- 100字如何写成10000字
+>
+> 1. 梳理大纲分模块
+> 2. 举例子讲故事
+> 3. 写排比
+>
+> 【06】26- 如何把100字写成1000字
+>
+> 1. 确定你要表达的观点。
+> 2. 罗列关键字
+> 3. 用文字把关键字串联起来
+>
+> 【07】33- 如何把一句话，写成1000字
+>
+> 【08】把【化繁为简】写成1000个字
+>
+> 1. 什么是化繁为简
+>
+> 【09】如何把100个字，写成1000个字？
+>
+> 1. 引用经典理论
+>
+> 【10】如何把100个字写成1000字？
+>
+> 1. 解释概念，描述画面
+> 2. 插入图片
+> 3. 讲自己的故事
+> 4. 写自己的感受
 
 ##### 3- 分类标记，熟能生巧
 
@@ -1484,6 +1504,7 @@
 1. 建立文件夹。
 
    给不同的分类建立对应的文件夹，是我们平时最常用的方法。
+
    ![分类](zhishi.assets/fl.png)
 
 2. 在名称中分类
@@ -1491,11 +1512,13 @@
    比如【如何把100字写成1000字】这个问题，其实就是在文件、笔记名称中做了分类的标记。
 
    后续通过筛选，可以快速找出这些分类。
+
    ![筛选](zhishi.assets/sx.png)
 
 3. 添加分类列
 
    我习惯用表格来管理文件，所以会添加辅助列，来备注笔记的【分类】。
+
     ![表格](zhishi.assets/bg.png)
 
 通过这些分类，可以更方便的进行多维度的分类管理。
