--- a/知识笔记.md
+++ b/知识笔记.md
@@ -796,11 +796,11 @@
 
 > 在文件名称里添加备注信息，应该大部分人都做过吧。
 >
-1. 年终总结.ppt
-2. 年终总结 第1版.ppt
-3. 年终总结 第2版.ppt
-4. 年终总结 第2版审核后.ppt
-5. 年终总结 第2版审核后修改.ppt
+> 1. 年终总结.ppt
+> 2. 年终总结 第1版.ppt
+> 3. 年终总结 第2版.ppt
+> 4. 年终总结 第2版审核后.ppt
+> 5. 年终总结 第2版审核后修改.ppt
 >
 >无论备注的多么的详细，你总会有找不到最新版是哪个的困惑。
 
@@ -1311,17 +1311,21 @@
 #### 如何快速的输入知识？
 
 **提问人：** 拉登Dony
+
 我平时获取信息的渠道非常多，比如B站、小红书、抖音、公众号之类的。这算是知识的输入吧。
 
 ![信息渠道](zhishi.assets/xyqd.png)
 
 但是收藏了很多，都没怎么看。
+
 如何有效的、高效的输入知识啊？
+
 **回答人：** 拉登老师
 
 ##### 1- 固定信息来源
 
 把收藏的知识，都放在一个统一的入口，下次找的时候更方便，不用翻箱倒柜。
+
 > 就像我们记别人的联系方式一样，别人可能是：
 >
 > 1. 口头说一个号码
@@ -1340,6 +1344,7 @@
 [flomoapp.com](https://flomoapp.com/)
 
 ![flomoapp.com](zhishi.assets/flomapp-1.png)
+
 ![flomoapp.com](zhishi.assets/flomapp-2.png)
 
 ##### 2- 固定笔记模板
