--- a/知识笔记.md
+++ b/知识笔记.md
@@ -4,19 +4,17 @@
 
 ### 01、什么是知识管理？
 
-#### 什么是知识管理？
-
 **提问人**： 拉登Dony
 
 1、看不见摸不到
 
->知识管理是一个看不见、摸不到，但让人非常向往的东西。
->所以在学习知识管理的路上，每个人的理解各不相同，也会有很多错误的、低效的做法。
+> 知识管理是一个看不见、摸不到，但让人非常向往的东西。
+> 所以在学习知识管理的路上，每个人的理解各不相同，也会有很多错误的、低效的做法。
 
 2、知识管理就是笔记软件吗？
 
->是不是印象笔记、Notion、幕布、Flomo等笔记软件？
->只要用好这些软件，我就会知识管理了？
+> 是不是印象笔记、Notion、幕布、Flomo等笔记软件？
+> 只要用好这些软件，我就会知识管理了？
 
 到底什么才是知识管理呢？
 
@@ -24,11 +22,15 @@
 
 知识管理是一个【管理工作】，就像是人力管理一样，最终的目的是希望，我们管理的人，能在需要的时候帮我们解决问题。
 
-##### 1、知识管理，最终目标是解决问题
+#### 1、知识管理，最终目标是解决问题
 
->当我们遇到问题时，能够快速的检索出需要的知识，来解决问题。比如最近很火的「东方甄选」董宇辉老师，从三尺讲台到带货直播间，他在自己的知识储备中，快速找出了带货商品需要的知识，给新东方带来了带货的顶流。这是知识管理的经典案例。
+> 当我们遇到问题时，能够快速的检索出需要的知识，来解决问题。
+>
+> 比如最近很火的「东方甄选」董宇辉老师，从三尺讲台到带货直播间，他在自己的知识储备中，快速找出了带货商品需要的知识，给新东方带来了带货的顶流。
+>
+> 这是知识管理的经典案例。
 
-##### 2、知识管理的产出物，是一个知识库
+#### 2、知识管理的产出物，是一个知识库
 
 > 所以知识管理的最终产出物，应该是一个你专属的「私人百度」，它能帮你：
 >
@@ -36,32 +38,30 @@
 > - 检索。能够快速检索出需要的知识
 > - 有效。遇到问题时，这些知识能有效的解决问题。
 
-##### 3、笔记软件，是搭建知识库的工具
+#### 3、笔记软件，是搭建知识库的工具
 
->这个知识库可以是纸质笔记本、电脑、手机等工具。也可以是印象笔记、GoodNotes、Notion、幕布等软件。
->真正的高手像「董宇辉」老师一样，他们的知识库就是大脑。
->只要能实现知识的整理、检索、有效存储，就可以。
+> 这个知识库可以是纸质笔记本、电脑、手机等工具。也可以是印象笔记、GoodNotes、Notion、幕布等软件。
+> 真正的高手像「董宇辉」老师一样，他们的知识库就是大脑。
+> 只要能实现知识的整理、检索、有效存储，就可以。
 
-##### 4、知识管理先做加法，再做减法
+#### 4、知识管理先做加法，再做减法
 
->知识管理，就是管理自己知识储备，这是一个先加法，再做减法的过程。
+> 知识管理，就是管理自己知识储备，这是一个先加法，再做减法的过程。
 >
 > 【1】加法
 >
->是通过学习，丰富自己的知识储备。
->当你知识储备很少时，不用去做筛选，各种知识对你来说，都是一种成长，所以要做加法。
+> 是通过学习，丰富自己的知识储备。
+> 当你知识储备很少时，不用去做筛选，各种知识对你来说，都是一种成长，所以要做加法。
 >
 >【2】减法
 >
->如果一直专注研究某个领域，比如Excel、写作、金融、编程等等，专业知识的积累越来越多，这
->个时候要尝试做减法。
->把时间、精力用在你擅长的领域，减少无关信息的干扰，不断的深挖一个领域，成为专家。
+> 如果一直专注研究某个领域，比如Excel、写作、金融、编程等等，专业知识的积累越来越多，这
+> 个时候要尝试做减法。
+> 把时间、精力用在你擅长的领域，减少无关信息的干扰，不断的深挖一个领域，成为专家。
 
 在这个系列教程中，我们先从加法开始，一起学习如何高效的做知识管理。
 
-### 02、知识管理，我曾经做过的五件错误的事情
-
-#### 知识管理，有哪些错误的习惯？
+### 02、知识管理，有哪些错误的习惯？
 
 **提问人：** 拉登Dony
 
@@ -71,20 +71,23 @@
 
 **回答人：** 拉登老师
 
-##### 1、用不同层级的文件夹来管理文件
+#### 1、用不同层级的文件夹来管理文件
 
 > 在管理文件夹的时候，用不同的文件夹做分类管理，再建立一个子文件夹，区分完成和未完成，再用子子文件夹，来记录不同的月份。。。
-文件夹的层级越多，文件的打开率就越低。这些文件就会被打入十八层地狱，收藏吃灰了。
+>
+> 文件夹的层级越多，文件的打开率就越低。这些文件就会被打入十八层地狱，收藏吃灰了。
 
-##### 2、用文件管理软件，来美化文件夹
+#### 2、用文件管理软件，来美化文件夹
 
->比如腾讯桌面管理等软件，在桌面上对文件夹分类管理；或者给文件夹换一个颜色等等。
-这些软件针对文件比较少的需求，可以临时应对，当你的文件多到几百上千个，桌面放不开的时候，这些方法还是治标不治本。
+> 比如腾讯桌面管理等软件，在桌面上对文件夹分类管理；或者给文件夹换一个颜色等等。
+>
+> 这些软件针对文件比较少的需求，可以临时应对，当你的文件多到几百上千个，桌面放不开的时候，这些方法还是治标不治本。
+>
 最好的方法，还是清单管理。
 
 ![笔记](zhishi.assets/bj.png)
 
-##### 3、在文件名称里标记状态
+#### 3、在文件名称里标记状态
 
 > 在文件名称里添加备注信息，应该大部分人都做过吧。
 >
@@ -94,28 +97,31 @@
 > 4. 年终总结 第2版审核后.ppt
 > 5. 年终总结 第2版审核后修改.ppt
 >
->无论备注的多么的详细，你总会有找不到最新版是哪个的困惑。
+> 无论备注的多么的详细，你总会有找不到最新版是哪个的困惑。
 
-##### 4、文件修改时间，最新的文件
+#### 4、文件修改时间，最新的文件
 
->寄期望于文件列表里的【修改时间】属性，来找到最新的文件。
-经常是，这个文件我只是打开了一下，没做任何的修改，随后Ctrl+S了一下，就变成最新的了。
-实际最新的哪个，就找不清了，只能一个一个打开，重新确认。
+> 寄期望于文件列表里的【修改时间】属性，来找到最新的文件。
+>
+> 经常是，这个文件我只是打开了一下，没做任何的修改，随后Ctrl+S了一下，就变成最新的了。
+>
+> 实际最新的哪个，就找不清了，只能一个一个打开，重新确认。
 
-##### 5、尝试手动给文件夹，加编码
+#### 5、尝试手动给文件夹，加编码
 
 > 网上很多讲知识管理的文章，都教大家对文件、笔记添加编号来管理，而且不同类型的文件、笔记，要用不同的字母来开头。
-这是一个很好的习惯，但是当你的文件多到几百个，文件分类有十几个字母的时候，添加编码是一个让人烦恼，而且工作量很大的事情。
+>
+> 这是一个很好的习惯，但是当你的文件多到几百个，文件分类有十几个字母的时候，添加编码是一个让人烦恼，而且工作量很大的事情。
 
-##### 6、用在线的工具来管理本地文件
+#### 6、用在线的工具来管理本地文件
 
 > 用比如notion，印象笔记等来管理本地的文件，把本地的文件，拖动到笔记里作为附件。
-如果只是Excel、Word、PPT，还说的过去，如果你有一些专业文件，比如PS、CAD、视频项目文件，或者文件大小在几十M、上百M的时候，这些文件放在在线工具中，每次还要再下载电脑上。
-更新完了，还得再上传，这版本的管理，又会变的非常复杂！
+>
+> 如果只是Excel、Word、PPT，还说的过去，如果你有一些专业文件，比如PS、CAD、视频项目文件，或者文件大小在几十M、上百M的时候，这些文件放在在线工具中，每次还要再下载电脑上。
+>
+> 更新完了，还得再上传，这版本的管理，又会变的非常复杂！
 
 ### 03、做知识管理的目的是什么？
-
-#### 做知识管理的目的是什么？
 
 **提问人：** 拉登Dony
 
@@ -123,10 +129,11 @@
 
 **回答人：** 拉登老师
 
-##### 1、知识管理，就像下象棋
+#### 1、知识管理，就像下象棋
 
->“马走日字象走田，兵卒过河横竖走，士象不离老王边，车行直路炮翻山。”
-上面是一个象棋口诀，快速记住每个棋子的作用、规则，并学会使用这些棋子：
+> “马走日字象走田，兵卒过河横竖走，士象不离老王边，车行直路炮翻山。”
+>
+> 上面是一个象棋口诀，快速记住每个棋子的作用、规则，并学会使用这些棋子：
 >
 > - 用什么棋子，可以吃掉哪些棋子？
 > - 没个棋子怎么走？
@@ -141,7 +148,7 @@
 2. 有明确目标。象棋的目标是吃掉对方的将帅。知识管理也要明确目标，解决什么问题，否则掌握十万大军，也是纸上谈兵。
 3. 了解知识用法。不要一维的收藏，每个知识就像一颗棋子，要明白这个知识能用来干什么，解决什么问题？
 
-##### 2、知识管理，不是做笔记
+#### 2、知识管理，不是做笔记
 
 知识管理常常会被理解成【做笔记】。
 
@@ -154,7 +161,7 @@
 
 手帐笔记、康奈尔笔记是非常好的表现形式，但是在知识的搜索速度上，没有百度来的更快、更直接。
 
-##### 3、知识管理，就是建立“通讯录”
+#### 3、知识管理，就是建立“通讯录”
 
 知识管理的目标，就像是建立【私人百度】，或者个人知识【通讯录】。
 
@@ -167,8 +174,6 @@
 知识管理的目标，就是梳理一个个的知识，给他们建立好【通讯录】需要的时候，快速找到需要的号码快速解决问题。
 
 ### 04、做不做知识管理，前后的区别是什么？
-
-#### 做不做知识管理，前后的区别是什么？
 
 **提问人：** 拉登Dony
 
@@ -197,12 +202,12 @@
 
 知识管理的目的:
 
-##### 1、提高检索的效率
+#### 1、提高检索的效率
 
 > 通多对信息进行分类整理。
 在美团里，单击顶部的分类图标，就可以聚焦信息。
 
-##### 2、降低信息检索的门槛
+#### 2、降低信息检索的门槛
 
 > 不用看小广告，不用社恐怎么问楼下的大爷。
 >
@@ -235,8 +240,6 @@
 
 ### 05、知识管理的流程是什么样的？
 
-#### 知识管理的流程是什么样的？
-
 **提问人：** 拉登Dony
 
 我该从哪里开始，具体操作的步骤是什么样的？
@@ -249,7 +252,7 @@
 2. 整理信息
 3. 输出信息
 
-##### 1、获取信息
+#### 1、获取信息
 
 知识管理的前提，是有“知识”可以管理。获取知识，有一定的知识沉淀，才会产生知识管理的需求。
 
@@ -258,13 +261,13 @@
 1. 提升学习积极性。通过手帐、思维导图等等视觉化的方式，提升学习的积极性。
 2. 简化入口，降低获取信息的阻碍。
 
-##### 2、整理信息
+#### 2、整理信息
 
 信息积累到了一定的数量，查阅起来效率也会随之降低。
 
 对信息进行分类整理，提升检索信息的效率，是整理信息的目的。
 
-##### 3、输出信息
+#### 3、输出信息
 
 百度搜索信息时，输入关键字，搜索框就会给出相关的提示。
 
@@ -277,21 +280,19 @@
 
 ### 06、新手如何开始知识管理？
 
-#### 新手如何开始知识管理？
-
 **提问人：** 拉登Dony
 
 我是新手，我从哪里开始，迈出知识管理学习的第1步？
 
 **回答人：** 拉登老师
 
-##### 1、先开始写
+#### 1、先开始写
 
 不要纠结用什么笔记的方式，什么笔记软件。
 
 可以写纸质的笔记、手绘笔记等等都可以。关键是开始写笔记，收集知识。
 
-##### 2、笔记模板
+#### 2、笔记模板
 
 按照一个固定的笔记模板，不断的重复，形成笔记习惯。
 
@@ -303,7 +304,7 @@
 
 一定要不断地重复一种方法，让这个方法成为肌肉记忆，下次启动的时候变的越来越简单。
 
-##### 3、输入为主，整理为辅
+#### 3、输入为主，整理为辅
 
 先不要着急整理，整理分类的时候，会让人陷入选择困难症，给输入增加阻碍。
 
@@ -315,8 +316,6 @@
 
 ### 07、知识管理的前提是什么？
 
-#### 知识管理的前提是什么？
-
 **提问人：** 拉登Dony
 
 是不是所有的人，都需要知识管理？
@@ -327,7 +326,7 @@
 
 **回答人：** 拉登老师
 
-##### 1、一切信息都是知识
+#### 1、一切信息都是知识
 
 知识管理，本质上是信息的管理，在遇到问题时，能够快速调用自己过去的经验，来解决问题。比如：
 
@@ -338,7 +337,7 @@
 
 知识不一定是书本上的知识，自己过去的经验都是知识，能用来解决问题的方法都是知识。
 
-##### 2、明确问题，有意识的积累知识
+#### 2、明确问题，有意识的积累知识
 
 遇到问题的时候，有意识的把自己想过的、搜索到的、向别人请教过的经验，总结下来，变成自己的知识库。
 
@@ -351,7 +350,7 @@
 
 把这些问题都归类成【职场社交】问题，后续有意思的收集整理，才能在这个话题上，积累更多的经验。
 
-##### 3、别纠结分类，先有足够多的积累
+#### 3、别纠结分类，先有足够多的积累
 
 新手做知识管理，容易纠结怎么做分类，看到网上各种分类的管理方法就照搬。
 
@@ -360,15 +359,13 @@
 
 所以先持续的输入，不断的积累，至少有50个积累，再考虑做分类的事情。
 
-##### 4、尝试输出，才能有更多学习的动力
+#### 4、尝试输出，才能有更多学习的动力
 
 知识就是力量，力量的表现方式就是能解决问题，最好是帮助被人解决问题。
 
 一个问题影响的人数越广，带来的激励就会越大，让你有源源不断的动力持续学习。
 
 ### 08、如何做到有效的知识管理？
-
-#### 如何做到有效的知识管理？
 
 **提问人：** 拉登Dony
 
@@ -379,7 +376,7 @@
 
 **回答人：** 拉登老师
 
-##### 1、知识要能解决问题
+#### 1、知识要能解决问题
 
 在富士康工作的时候，办公室墙上贴着标语【会必议、议必决、决必行、行必果】。
 
@@ -394,15 +391,15 @@
 
 知识管理和开会一样，要能解决问题，而不是一味的收藏，最关键的是要有能落实执行的计划，有结果的追踪、反馈。
 
->工作中遇到很多烦心事情，父母会过来安慰你呀，要注意休息啊，要注意饮食作息规律等等。
+> 工作中遇到很多烦心事情，父母会过来安慰你呀，要注意休息啊，要注意饮食作息规律等等。
 >
->虽然他们的建议都非常对、也非常好，但是解决不了你的问题，起不了作用。
+> 虽然他们的建议都非常对、也非常好，但是解决不了你的问题，起不了作用。
 
 现在太多所谓的知识博主的方法，都非常的正确，让人忍不住收藏。收藏过后放下手机，还是按照之前的方法按部就班的工作，没有起到实际的作用。
 
 记住，知识管理也要【会必议、议必决、决必行、行必果】。
 
-##### 2、知识要经常使用
+#### 2、知识要经常使用
 
 需要频繁的使用积累的知识解决问题。
 
@@ -412,7 +409,7 @@
 
 因为和需求不匹配，不常用就会很快遗忘。
 
-##### 3、知识要轻松获取
+#### 3、知识要轻松获取
 
 获取难度越大，阻碍就越大，就越容易放弃。
 
@@ -436,8 +433,6 @@
 
 ### 09、不同水平的人，学习知识管理，有什么区别？
 
-#### 不同水平的人，学习知识管理，有什么区别？
-
 **提问人：**  拉登Dony
 
 是不是每个人的知识管理方法、需求都一样的？
@@ -450,12 +445,12 @@
 - 输入方式
 - 输出方式
 
-##### 1、小学，目标清晰，知识资源丰富
+#### 1、小学，目标清晰，知识资源丰富
 
 1. 目标需求清晰
 
    > 小学、初中、高中的时候，学习目标、教学大纲非常清晰，都是固定的科目：语数英、物理、化学、生物、地理、历史政治。
-   >按照教学大纲一步步的学习即可。
+   > 按照教学大纲一步步的学习即可。
 
 2. 输入简单，被动思考
 
@@ -472,7 +467,7 @@
 1. 会思考。老师教的内容，能理解。
 2. 死记硬背。把学到的内容记下来，考试的时候用。
 
-##### 2、大学，目标清晰 ，知识资源较少
+#### 2、大学，目标清晰 ，知识资源较少
 
 1. 目标清晰
 
@@ -480,13 +475,13 @@
 
 2. 输入困难，资源较少
 
-   >从小学到高中，有9年的时间，学习的都是相关的科目，语数英、物理、化学、地理。2022年全国的中小学生共计月1亿人，各种学习资料，琳琅满目。
+   > 从小学到高中，有9年的时间，学习的都是相关的科目，语数英、物理、化学、地理。2022年全国的中小学生共计月1亿人，各种学习资料，琳琅满目。
    > 大学只有4年，2022年大学毕业生1000万人，学习的科目从来都没接触过，都是细分的领域，资源相对也少很多，学习难度也难度大一些。
 
 3. 输出标准明确，但是方向更多
 
-   >考试、毕业依然是大学生最基本的目标。也是最简单、最单一的目标。
-   >相比中小学，大学毕业的下一个阶段，会有不同的努力方向。
+   > 考试、毕业依然是大学生最基本的目标。也是最简单、最单一的目标。
+   > 相比中小学，大学毕业的下一个阶段，会有不同的努力方向。
 
    1. 考研，考公。标准明确，相对简单
    2. 工作。标准模糊，要学哪些知识？用这些知识解决什么问题？应聘哪些工作？都非常的模糊。大部分人在毕业哪一年才思考这些问题。
@@ -497,7 +492,7 @@
 2. 主动思考。老师不会像中小学老师那么有耐心，我们要用更短的时间，掌握更复杂的知识。要自己学会思考。
 3. 拓展新科目。考研、考公不会发课本，也不在教学大纲里。招聘单位也不会告诉你他们需要你掌握什么能力，这一切都要自己明确方向，拆解成学习的计划。
 
-##### 3、职场，目标模糊 ，知识资源匮乏
+#### 3、职场，目标模糊 ，知识资源匮乏
 
 1. 目标需求模糊
 
@@ -528,8 +523,6 @@
 
 ### 10、如何找到适合自己的知识？
 
-#### 如何找到适合自己的知识？
-
 **提问人：** 拉登Dony
 
 进入职场了，没有标准的课程，没有教学大纲了，如何能够找到适合自己的知识？
@@ -538,7 +531,7 @@
 
 **回答人：** 拉登老师
 
-##### 1、先开始做，别考虑太多
+#### 1、先开始做，别考虑太多
 
 新人在学习新知识时，顾虑会比较多，经常被下面这类问题阻碍，无法迈出第1步。比如下面这些问题，你是不是也纠结过？
 
@@ -548,6 +541,7 @@
 4. 学完之后如果没有用，怎么办？
 
 每个人的需求、环境各不相同，同样的问题，不同人的答案不一样。别人的经验只能给你做借鉴，正确的答案，只有自己尝试过才能真正了解。
+
 > 前公司有个同事和我一个宿舍。一直嚷嚷着要跟我学习Excel。
 > 我说可以，等你学好了，记得吃个饭，无条件、毫无保留的教你。
 > 同事说：不着急，等我看完这个电视剧，再跟你学。
@@ -555,7 +549,7 @@
 
 进入职场之后，没有人会你的学习成果打包票，也没有人给你做学习承诺。敢给你做各种承诺的人，是想让你花钱买课。
 
-##### 2、明确目标，专注+积累
+#### 2、明确目标，专注+积累
 
 迈出第1步之后，尝试做一些积累，不用很多，这一步是为了**明确学习的目标**。
 
@@ -578,7 +572,7 @@
 
 ![power-a](zhishi.assets/powerbi-b.png)
 
-##### 3、花钱买经验，节省时间
+#### 3、花钱买经验，节省时间
 
 关注免费的资源是一种非常好的学习方式，但是需要花费大量的时间去筛选内容，去试错，效率非常低。
 
@@ -600,8 +594,6 @@
 
 ### 11、如何快速的输入知识？
 
-#### 如何快速的输入知识？
-
 **提问人：** 拉登Dony
 
 我平时获取信息的渠道非常多，比如B站、小红书、抖音、公众号之类的。这算是知识的输入吧。
@@ -614,7 +606,7 @@
 
 **回答人：** 拉登老师
 
-##### 1、固定信息来源
+#### 1、固定信息来源
 
 把收藏的知识，都放在一个统一的入口，下次找的时候更方便，不用翻箱倒柜。
 
@@ -639,7 +631,7 @@
 
 ![flomoapp.com](zhishi.assets/flomapp-2.png)
 
-##### 2、固定笔记模板
+#### 2、固定笔记模板
 
 看书的时候，做了很多的笔记，但是遇到问题的第1反应，还是去百度搜索。因为：
 
@@ -668,8 +660,6 @@
 
 ### 12、快速收集知识的案例有哪些？
 
-#### 快速收集知识的案例有哪些？
-
 **提问人：** 拉登Dony
 
 前面讲的道理都懂、都对，但是自己做的时候，还是无从下手，
@@ -680,7 +670,7 @@
 
 一定要有目标的去收集知识点。
 
-##### 1、透过现象-找到有用的知识
+#### 1、透过现象-找到有用的知识
 
 一篇文章或视频里面80%的内容是用来激发用户的感受，调动用户情绪，让用户感觉【这个真好】【非常有用】。
 
@@ -693,7 +683,7 @@
 
 能把上面几个问题回答清楚，才能看到剩下20%真正有用的知识。
 
-##### 2、通过提问，明确目标
+#### 2、通过提问，明确目标
 
 日本公司是如何向下属布置任务的，管理者至少会问五遍，让下属更清楚的明确问题要求：
 
@@ -723,11 +713,11 @@
 
 提问的过程，会激发对方去思考，慢慢的明确目标。
 
->比如，在学习写作表达时，需要学习的内容很多，包括：写作框架、起标题、引用金句、故事带入等等，我总是记不住，写作的时候，也想不到从这些角度去写。
+> 比如，在学习写作表达时，需要学习的内容很多，包括：写作框架、起标题、引用金句、故事带入等等，我总是记不住，写作的时候，也想不到从这些角度去写。
 >
->读到好的文章，也不会向上面那样结构清晰的整理文章的优点。
+> 读到好的文章，也不会向上面那样结构清晰的整理文章的优点。
 >
->后来我想到一个方法，每次遇到好的文章，都会问自己，别人是【如何把100字写成1000字】的？然后一这个问题为标题，收集素材。
+> 后来我想到一个方法，每次遇到好的文章，都会问自己，别人是【如何把100字写成1000字】的？然后一这个问题为标题，收集素材。
 
 久而久之就积累了很多：
 
@@ -749,14 +739,14 @@
 >
 >【02】16- 如何把100字写成1000字
 >
->1. 整理文档大纲，罗列清单
->2. 分类整理大纲，梳理逻辑
->3. 电影时演绎大纲模块
+> 1. 整理文档大纲，罗列清单
+> 2. 分类整理大纲，梳理逻辑
+> 3. 电影时演绎大纲模块
 >
 >【03】17- 如何把100字写成1000字
 >
->1. 偷换概念，把问题作为答案展开说明，对答案闭口不提
->2. 多说正确的废话，把好的事务都写上
+> 1. 偷换概念，把问题作为答案展开说明，对答案闭口不提
+> 2. 多说正确的废话，把好的事务都写上
 >
 >【04】19- 如何把100字写成1000字？
 >
@@ -793,7 +783,7 @@
 > 3. 讲自己的故事
 > 4. 写自己的感受
 
-##### 3、分类标记，熟能生巧
+#### 3、分类标记，熟能生巧
 
 如果不知道怎么提问，可以尝试对笔记、知识进行分类，在分类的过程中，你会思考：
 
